--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/loyaltycard
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = tuhv
+spring.datasource.password = 1234
 
 spring.jpa.hibernate.ddl-auto = create
