--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/loyaltycard
 spring.datasource.username = root
 spring.datasource.password = tuhv
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
